--- a/about.html
+++ b/about.html
@@ -62,5 +62,19 @@
 <!--==============================Mian Wrapper Ends=============================-->
 </div>
 
+
+<!-- added changes -->
+<!--========================Header Starts======================================-->
+
+	<div class="header">
+		
+		<div class="logo">
+		
+			<h1><a href="#">GONZO</a></h1>
+		
+		</div>
+
+	</div>
+	
 </body>
 </html>
